add: fundamentals of information systems, computer organization and career planning

--- a/fundamentals-information-systems/01.md
+++ b/fundamentals-information-systems/01.md
@@ -65,7 +65,7 @@ It was not long before the company's strategic level would see that the systems 
 ## Systems Theory
 ### Functionalism
  - Each part (element) that makes up a system of the EVE performs a part of the larger function that is the objective of the system in the broadest direction.
-### Hallism
+### Hallism (holismo)
  - All systems consist of subsystems (smaller systems) and their elements are interrelated.This means that the whole is not simple sum of the parts, and that the system itself can only be explained as the whole.
 
  A visão ou enfoque sistêmico é importante para um melhor entendimento da complexidade de qualquer situação ou problema que possa acontecer na empresas. Ajuda-nos visualizar as empresas como sistemas complexos, afetadas por inúmeras variáveis.
